tests/test_files_pa3/errors/InvalidIntegerLiteral.ic
class A {
	
	static void main(string[] args) { }
	
	int[] b;
	
	int f() {
	
		b = new int[10];
	
		b[2147483647] = b[2147483647];
		b[2147483648] = // need newline for test
			b[2147483648];

		if (2147483647 == 1) { }
		if (2147483648 == 1) { }
		
		while (2147483647 != 1) { }
		while (2147483648 != 1) { }
		
		int e = 2147483647;
		int f = 2147483648;
		
		int g = -2147483648;
		int h = -(2147483648);
		
		return 2147483647;
		return 2147483648;
		
	}

}